Fixed logo and made appbar smaller on mobile screens

--- a/client/main.css
+++ b/client/main.css
@@ -8,9 +8,9 @@ html, body {
 }
 
 .equithon-logo {
-    height: 100px;
+    height: 90px;
+    padding: 5px;
     width: auto;
-
     margin: 0 auto;
 }
 
@@ -86,6 +86,13 @@ html, body {
 }
 
 @media screen and (max-width: 600px) {
+    #appbar {
+        height: 60px;
+    }
+    .equithon-logo {
+        height: 50px;
+    }
+
     .split-column-row {
         display: grid;
         grid-template-columns: 1fr;
@@ -151,5 +158,6 @@ html, body {
 
     #app-body {
         grid-row-gap: 20px;
+        padding-top: 70px;
     }
 }
